# rust_crud

./: .env  Cargo.toml  docker-compose.yml
migrations/2024-03-30-100033_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/hashing/: mod.rs
src/models/: post.rs  user.rs
