[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argon2 = "0.5.3"
axum = "0.7.5"
diesel = { version = "2.1.5", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.17.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.81"
